// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SegmentedControl /> > should pass "component" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  min-height: calc(var(--pv-size-base) * 4 + 2px);
  height: 100%;
  padding: 0 calc(var(--pv-size-base) * 2);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-gray-10);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-5);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-6);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
}

<a
    aria-selected="false"
    class="emotion-0"
    id="segmented_control_1"
    role="tab"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Tab-1
    </span>
  </a>
</DocumentFragment>
`;

exports[`<SegmentedControl /> > should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  min-height: calc(var(--pv-size-base) * 4 + 2px);
  height: 100%;
  padding: 0 calc(var(--pv-size-base) * 2);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-gray-10);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-5);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-6);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
}

<button
    aria-selected="false"
    class="my-class-name emotion-0"
    id="segmented_control_1"
    role="tab"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Tab-1
    </span>
  </button>
</DocumentFragment>
`;

exports[`<SegmentedControl /> > should pass disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  min-height: calc(var(--pv-size-base) * 4 + 2px);
  height: 100%;
  padding: 0 calc(var(--pv-size-base) * 2);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-gray-10);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-5);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-6);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
}

<button
    aria-selected="false"
    class="emotion-0"
    disabled=""
    id="segmented_control_1"
    role="tab"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Tab-1
    </span>
  </button>
</DocumentFragment>
`;

exports[`<SegmentedControl /> > should render colors > colors: "black" & selected: "false" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  min-height: calc(var(--pv-size-base) * 4 + 2px);
  height: 100%;
  padding: 0 calc(var(--pv-size-base) * 2);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-gray-10);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-5);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-6);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
}

<button
    aria-selected="false"
    class="emotion-0"
    id="segmented_control_1"
    role="tab"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Tab-1
    </span>
  </button>
</DocumentFragment>
`;

exports[`<SegmentedControl /> > should render colors > colors: "black" & selected: "true" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  min-height: calc(var(--pv-size-base) * 4 + 2px);
  height: 100%;
  padding: 0 calc(var(--pv-size-base) * 2);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--pv-color-white);
  box-shadow: var(--pv-shadow-light-soft);
  pointer-events: none;
  background-color: var(--pv-color-white);
  border-color: var(--pv-color-gray-3);
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-5);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-6);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
}

<button
    aria-selected="true"
    class="emotion-0"
    id="segmented_control_1"
    role="tab"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Tab-1
    </span>
  </button>
</DocumentFragment>
`;

exports[`<SegmentedControl /> > should render colors > colors: "white" & selected: "false" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  min-height: calc(var(--pv-size-base) * 4 + 2px);
  height: 100%;
  padding: 0 calc(var(--pv-size-base) * 2);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-gray-10);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-5);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-6);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
}

<button
    aria-selected="false"
    class="emotion-0"
    id="segmented_control_1"
    role="tab"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Tab-1
    </span>
  </button>
</DocumentFragment>
`;

exports[`<SegmentedControl /> > should render colors > colors: "white" & selected: "true" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  min-height: calc(var(--pv-size-base) * 4 + 2px);
  height: 100%;
  padding: 0 calc(var(--pv-size-base) * 2);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--pv-color-white);
  box-shadow: var(--pv-shadow-light-soft);
  pointer-events: none;
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-white);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-5);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-6);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
}

<button
    aria-selected="true"
    class="emotion-0"
    id="segmented_control_1"
    role="tab"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Tab-1
    </span>
  </button>
</DocumentFragment>
`;

exports[`<SegmentedControl /> > should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  min-height: calc(var(--pv-size-base) * 4 + 2px);
  height: 100%;
  padding: 0 calc(var(--pv-size-base) * 2);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms,box-shadow 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-gray-10);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-5);
  border-color: var(--pv-color-gray-5);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-6);
  border-color: var(--pv-color-gray-6);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
}

<button
    aria-selected="false"
    class="emotion-0"
    id="segmented_control_1"
    role="tab"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Tab-1
    </span>
  </button>
</DocumentFragment>
`;
